the number of comments is more visible for ticket https://github.com/numericube/twistranet/issues/24

--- a/twistranet/themes/twistheme/static/css/content.css
+++ b/twistranet/themes/twistheme/static/css/content.css
@@ -300,9 +300,6 @@
   cursor: default;
 }
 
-
-.comment_count {font-weight: bold;}
-
 .few-comments .comment_count,
 .add-comment .comment_count {display: none;}
 
